<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_recycler_item_2_linear_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/menu_font"
        android:paddingTop="5dp"
        android:text="About"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/menu_font"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#9A9A9A"
        android:backgroundTintMode="add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/menu_font"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/menu_font"
            android:text="@string/owner"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/menu_font"
            android:text="@string/github_link"
            android:textColor="@color/white"
            android:textSize="8sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/menu_font"
            android:text="@string/license"
            android:textColor="@color/white"
            android:textSize="6sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/menu_font"
            android:text="@string/privacy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="6sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/menu_font"
            android:text="@string/disclaimer"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="6sp" />
    </LinearLayout>
</LinearLayout>